--- a/Client/src/components/Toast/Toast.module.scss
+++ b/Client/src/components/Toast/Toast.module.scss
@@ -3,10 +3,11 @@
   box-sizing: border-box;
   position: fixed;
   z-index: 9999;
+  transition: all 0.2s ease-in-out;
 }
 
 .top-right {
-  top: 12px;
+  top: 40px;
   right: 12px;
   animation: toast-in-right 0.4s;
 }
@@ -44,6 +45,8 @@
   box-shadow: 0 0 10px #999;
   color: var(--black);
   opacity: 0.9;
+  transition: all 0.5s ease-in-out;
+  // animation: onRemoveAnimation 0.6s ease-in-out;
   // animation: toast-in-right 0.7s;
 
   &:hover {
@@ -99,6 +102,15 @@
   }
   to {
     transform: translateX(0);
+  }
+}
+
+@keyframes onRemoveAnimation {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
   }
 }
 
