--- a/Client/src/components/Input/Input.module.scss
+++ b/Client/src/components/Input/Input.module.scss
@@ -6,6 +6,10 @@
   flex-direction: column;
   justify-content: center;
 
+  .form-select {
+    outline: none;
+  }
+
   .form_label {
     margin-bottom: 12px;
     font-size: 1.8rem;
@@ -20,18 +24,6 @@
   //   margin-bottom: 6px;
   //   border: 2px solid var(--primary);
 
-  .form_input {
-    // height: 100%;
-    // width: 100%;
-    height: 46px;
-    width: 100%;
-    font-size: 1.6rem;
-    padding-left: 12px;
-    margin-bottom: 6px;
-    border: 2px solid var(--primary);
-    // border-radius: 100%;
-  }
-
   .red-outline {
     border: 2px solid var(--red-color);
   }
@@ -45,6 +37,19 @@
     color: var(--red-color);
     // display: none;
   }
+}
+
+.form_input {
+  // height: 100%;
+  // width: 100%;
+  height: 46px;
+  width: 100%;
+  font-size: 1.6rem;
+  padding-left: 12px;
+  margin-bottom: 6px;
+  border: 2px solid var(--primary);
+  color: var(--darkGray);
+  // border-radius: 100%;
 }
 
 .rounded {
